[tool.poetry]
name = "athena"
version = "0.1.00"
description = "Job scraper for LinkedIn, Indeed, Glassdoor & ZipRecruiter"
authors = [
    "Zachary Hampton <zachary@bunsly.com>", 
    "Cullen Watson <cullen@bunsly.com>", 
    "Dalton Walker <dalton.walker@openapply.ai>", 
    "Trevor Garrett <trevor.garrett@openapply.ai>"
]
homepage = "https://github.com/8lb6ozbabyjsus/openapply-athena"
readme = "README.md"

packages = [
    { include = "athena", from = "src" }
]

[tool.poetry.dependencies]
annotated-types = "0.7.0"
apscheduler = "3.10.4"
beautifulsoup4 = "4.12.3"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.4"
fastapi = "0.112.0"
h11 = "0.14.0"
httpcore = "1.0.0"
httpx = "0.27.0"
idna = "3.7"
markdownify = "0.13.1"
numpy = "2.00.0"
pandas = "2.2.2"
pydantic = "2.8.2"
python = "^3.12.4"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.1"
regex = "2024.7.24"
requests = "2.32.3"
six = "1.16.0"
soupsieve = "2.5"
tls-client = "1.0.1"
typing-extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
uvicorn = "0.15.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
jupyter = "^1.0.0"
black = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
